--- a/package.json
+++ b/package.json
@@ -25,12 +25,29 @@
     "linkbox-sdk": "1.0.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "2.0.1",
     "@typescript-eslint/eslint-plugin": "4.15.2",
     "@typescript-eslint/parser": "4.15.2",
     "eslint": "7.20.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "prettier": "2.2.1",
+    "release-it": "14.5.0",
     "typescript": "4.2.3"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: Release version ${version}",
+      "requireCleanWorkingDir": true
+    },
+    "npm": {
+      "publish": false
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular",
+        "infile": "CHANGELOG.md"
+      }
+    }
   }
 }
