--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "prettier": "2.2.1",
     "release-it": "14.5.0",
+    "rimraf": "3.0.2",
     "typescript": "4.2.3"
   },
   "release-it": {
