--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "linkbox-remote",
+  "name": "companion-module-linkbox-remote",
   "version": "1.1.3",
   "description": "linkbox remote",
   "main": "dist/index.js",
   "scripts": {
     "dev": "yarn build:watch",
-    "build": "rimraf dist && yarn build:main",
+    "build": "npx rimraf dist && yarn build:main",
     "build:main": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json --watch",
     "postinstall": "yarn build",
