--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "companion-module-linkbox-remote",
+  "name": "linkbox-remote",
   "version": "1.1.5",
   "description": "linkbox remote",
   "main": "dist/index.js",
