--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+	"arrowParens": "always",
+	"bracketSpacing": true,
+	"printWidth": 120,
+	"semi": false,
+	"singleQuote": true,
+	"useTabs": true,
+	"endOfLine": "lf"
 }
