--- a/package.json
+++ b/package.json
@@ -1,57 +1,66 @@
 {
-  "name": "linkbox-remote",
-  "version": "1.2.1",
-  "description": "linkbox remote",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "yarn build:watch",
-    "build": "npx rimraf dist && yarn build:main",
-    "build:main": "npx typescript@4.2.3 -p tsconfig.build.json",
-    "build:watch": "tsc -p tsconfig.build.json --watch",
-    "postinstall": "yarn build",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint . --ext .ts"
-  },
-  "author": "Simon Holzmayer",
-  "license": "MIT",
-  "keywords": [
-    "linkbox"
-  ],
-  "manufacturer": "linkbox",
-  "product": "Web API and Controller",
-  "shortname": "linkbox-remote",
-  "dependencies": {
-    "graphql": "15.5.0",
-    "graphql-request": "3.4.0",
-    "graphql-tag": "2.11.0",
-    "@linkbox/sdk": "1.3.1"
-  },
-  "devDependencies": {
-    "@release-it/conventional-changelog": "2.0.1",
-    "@typescript-eslint/eslint-plugin": "4.18.0",
-    "@typescript-eslint/parser": "4.18.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "prettier": "2.2.1",
-    "release-it": "14.5.0",
-    "rimraf": "3.0.2",
-    "typescript": "4.2.3"
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: Release version ${version}",
-      "requireCleanWorkingDir": true,
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": false
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular",
-        "infile": "CHANGELOG.md"
-      }
-    }
-  }
+	"name": "linkbox-remote",
+	"version": "1.2.1",
+	"description": "linkbox remote",
+	"main": "dist/index.js",
+	"scripts": {
+		"dev": "yarn build:watch",
+		"build": "npx rimraf dist && yarn build:main",
+		"build:main": "npx typescript@4.2.3 -p tsconfig.build.json",
+		"build:watch": "tsc -p tsconfig.build.json --watch",
+		"postinstall": "yarn build",
+		"format": "prettier --write \"src/**/*.ts\"",
+		"lint": "eslint . --ext .ts"
+	},
+	"author": "Simon Holzmayer",
+	"license": "MIT",
+	"keywords": [
+		"linkbox"
+	],
+	"manufacturer": "linkbox",
+	"product": "Web API and Controller",
+	"shortname": "linkbox-remote",
+	"dependencies": {
+		"graphql": "15.5.0",
+		"graphql-request": "3.4.0",
+		"graphql-tag": "2.11.0",
+		"@linkbox/sdk": "1.3.1"
+	},
+	"devDependencies": {
+		"@release-it/conventional-changelog": "2.0.1",
+		"@typescript-eslint/eslint-plugin": "4.18.0",
+		"@typescript-eslint/parser": "4.18.0",
+		"eslint": "7.22.0",
+		"eslint-config-prettier": "8.1.0",
+		"eslint-plugin-prettier": "3.3.1",
+		"prettier": "2.2.1",
+		"release-it": "14.5.0",
+		"rimraf": "3.0.2",
+		"typescript": "4.2.3"
+	},
+	"release-it": {
+		"git": {
+			"commitMessage": "chore: Release version ${version}",
+			"requireCleanWorkingDir": true,
+			"tagName": "v${version}"
+		},
+		"npm": {
+			"publish": false
+		},
+		"plugins": {
+			"@release-it/conventional-changelog": {
+				"preset": "angular",
+				"infile": "CHANGELOG.md"
+			}
+		}
+	},
+	"homepage": "https://github.com/bitfocus/companion-module-linkbox-remote#readme",
+	"bugs": {
+		"url": "https://github.com/bitfocus/companion-module-linkbox-remote/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bitfocus/companion-module-linkbox-remote.git"
+	},
+	"api_version": "1.0.0"
 }
