--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "yarn build:watch",
 		"build": "npx rimraf dist && yarn build:main",
-		"build:main": "npx --package=typescript@4.2.3 -c 'tsc -p tsconfig.build.json'",
+		"build:main": "npx --package=typescript@4.2.3 -c \"tsc -p tsconfig.build.json\"",
 		"build:watch": "tsc -p tsconfig.build.json --watch",
 		"postinstall": "yarn build",
 		"format": "prettier --write \"src/**/*.ts\"",
